# cs-ai-builder-demo

./: .gitignore  Makefile  README.md  pyproject.toml  streamlit_demo.py
.github/workflows/: ci.yml
app/: __init__.py  draft.py  eval.py  kb.py  llm.py  main.py
app/prompts/: draft_v1.txt
data/: kb.jsonl
docs/: architecture.md
tests/: eval_set.jsonl  test_draft.py  test_eval.py
